--- a/app/src/main/res/layout/activity_checkout_form.xml
+++ b/app/src/main/res/layout/activity_checkout_form.xml
@@ -238,7 +238,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Voucher Code"
+                android:text="Voucher Code (Optional)"
                 android:textSize="18sp"
                 android:textStyle="bold"
                 android:textColor="@color/black"
@@ -276,12 +276,22 @@
             </LinearLayout>
 
             <!-- Stripe Button -->
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_stripe_payment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:text="Pay with Stripe"
-                android:layout_marginTop="20dp" />
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:background="@drawable/add_tocart_border"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:padding="16dp"
+                android:elevation="8dp"
+                android:stateListAnimator="@animator/button_state_list_animator" />
+
 
         </LinearLayout>
     </androidx.core.widget.NestedScrollView>
