--- a/app/src/main/res/layout/activity_manage_order_detail.xml
+++ b/app/src/main/res/layout/activity_manage_order_detail.xml
@@ -87,6 +87,25 @@
                         android:textColor="#f51c29"
                         android:layout_marginTop="8dp" />
 
+                    <TextView
+                        android:id="@+id/product_brand"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Brand: "
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:layout_marginTop="4dp"/>
+
+                    <TextView
+                        android:id="@+id/product_year"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Brand: "
+                        android:textSize="16sp"
+                        android:textColor="@android:color/black"
+                        android:layout_marginTop="4dp"/>
+
+
                     <!-- Order Status -->
                     <TextView
                         android:id="@+id/order_status"
@@ -94,7 +113,7 @@
                         android:layout_height="wrap_content"
                         android:text="Order Status"
                         android:textSize="16sp"
-                        android:textColor="#757575"
+                        android:textColor="@android:color/holo_green_dark"
                         android:layout_marginTop="8dp" />
 
                     <!-- Delivery Option -->
@@ -107,15 +126,6 @@
                         android:textColor="#757575"
                         android:layout_marginTop="8dp" />
 
-                    <!-- Payment Status (Added here) -->
-                    <TextView
-                        android:id="@+id/payment_status"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:text="Payment Status"
-                        android:textSize="16sp"
-                        android:textColor="#757575"
-                        android:layout_marginTop="20dp" />
 
                 </LinearLayout>
 
@@ -148,6 +158,7 @@
                         android:textStyle="bold"
                         android:textSize="18sp"
                         android:textColor="#212121" />
+
 
                     <TextView
                         android:id="@+id/customer_email"
@@ -224,6 +235,15 @@
                         android:textColor="#424242"
                         android:textStyle="bold"
                         android:layout_marginBottom="16dp" />
+
+                    <TextView
+                        android:id="@+id/payment_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Payment Status"
+                        android:textSize="16sp"
+                        android:textColor="#757575"
+                       />
 
                     <!-- Horizontal Layout for Receipt URL -->
                     <LinearLayout
