--- a/app/src/main/res/layout/activity_order_details.xml
+++ b/app/src/main/res/layout/activity_order_details.xml
@@ -85,6 +85,23 @@
                         android:textColor="#f51c29"
                         android:paddingTop="8dp" />
 
+                    <TextView
+                        android:id="@+id/tv_product_brand"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Brand:"
+                        android:textSize="16sp"
+                        android:paddingTop="4dp"/>
+
+                    <TextView
+                        android:id="@+id/tv_product_year"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:text="Model Year:"
+                        android:textSize="16sp"
+                        android:paddingTop="4dp"/>
+
+
                     <!-- Shop Name -->
                     <TextView
                         android:id="@+id/tv_shop_name"
@@ -122,18 +139,9 @@
                         android:layout_height="wrap_content"
                         android:text="Order Status: "
                         android:textSize="16sp"
-                        android:textColor="#757575"
+                        android:textColor="@android:color/holo_green_dark"
                         android:paddingTop="8dp" />
 
-                    <!-- Payment Status -->
-                    <TextView
-                        android:id="@+id/tv_payment_status"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:text="Payment Status: "
-                        android:textSize="16sp"
-                        android:textColor="#757575"
-                        android:paddingTop="8dp" />
 
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
@@ -158,16 +166,29 @@
                         android:id="@+id/tv_payment_info"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
-                        android:text="Payment Details will appear here"
+                        android:text="Payment Details"
+                        android:textSize="18sp"
+                        android:textColor="#424242"
+                        android:textStyle="bold"
+                        android:layout_marginBottom="16dp" />
+
+                    <TextView
+                        android:id="@+id/payment_status"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Payment Status"
                         android:textSize="16sp"
-                        android:textColor="#424242" />
+                        android:textColor="#757575"
+                        />
 
                     <!-- Label and URL (in one line) -->
                     <LinearLayout
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:orientation="horizontal"
-                        android:paddingTop="16dp">
+                        android:paddingTop="8dp">
+
+
 
                         <!-- Receipt URL Label -->
                         <TextView
