--- a/app/src/main/res/layout/activity_payment.xml
+++ b/app/src/main/res/layout/activity_payment.xml
@@ -185,15 +185,21 @@
                     android:layout_marginStart="10dp" /> <!-- Adds a small margin to the left -->
             </LinearLayout>
 
-            <!-- Confirm Button -->
-            <Button
+            <androidx.appcompat.widget.AppCompatButton
                 android:id="@+id/btn_stripe_payment"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Confirm Payment"
-                android:textColor="@color/white"
-                android:backgroundTint="@color/primary"
-                android:layout_marginTop="15dp" />
+                android:text="Pay with Stripe"
+                android:textSize="16sp"
+                android:textColor="@android:color/black"
+                android:textStyle="bold"
+                android:background="@drawable/add_tocart_border"
+                android:layout_marginTop="20dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:padding="16dp"
+                android:elevation="8dp"
+                android:stateListAnimator="@animator/button_state_list_animator" />
         </LinearLayout>
     </ScrollView>
 </LinearLayout>
