--- a/app/src/main/res/layout/activity_seller_details.xml
+++ b/app/src/main/res/layout/activity_seller_details.xml
@@ -236,18 +236,7 @@
             </LinearLayout>
 
             <!-- Go Now -->
-            <TextView
-                android:id="@+id/goNow"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Go Now"
-                android:textSize="16sp"
-                android:textColor="#2196F3"
-                android:clickable="true"
-                android:focusable="true"
-                android:textStyle="bold"
-                android:layout_marginTop="5dp"
-                android:gravity="center" />
+
 
             <!-- Map -->
             <LinearLayout
@@ -264,7 +253,24 @@
                     android:name="com.google.android.gms.maps.SupportMapFragment"
                     android:layout_width="match_parent"
                     android:layout_height="match_parent" />
+
+
             </LinearLayout>
+
+            <TextView
+                android:id="@+id/goNow"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Go Now"
+                android:textSize="16sp"
+                android:textColor="#2196F3"
+                android:clickable="true"
+                android:padding="20dp"
+                android:focusable="true"
+                android:background="@drawable/textview_border"
+                android:textStyle="bold"
+                android:layout_marginTop="5dp"
+                android:gravity="center" />
 
             <!-- RecyclerView for Comments and Reviews -->
             <androidx.recyclerview.widget.RecyclerView
