--- a/app/src/main/res/layout/activity_all_similar_shops.xml
+++ b/app/src/main/res/layout/activity_all_similar_shops.xml
@@ -1,27 +1,30 @@
+<?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical">
 
-    <!-- Toolbar Section -->
+
     <androidx.appcompat.widget.Toolbar
         android:id="@+id/toolbar"
         android:layout_width="match_parent"
         android:layout_height="?attr/actionBarSize"
         android:background="@android:color/holo_blue_light"
-        app:title="Similar Services"
+        app:title="Similar Shops"
         app:titleTextColor="@android:color/white"
         app:navigationIcon="@drawable/ic_back_white"
         android:elevation="4dp" />
 
-    <!-- RecyclerView Section -->
+    <!-- Title for All Similar Shops -->
+
+    <!-- All Shops RecyclerView -->
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/allServicesRecycler"
-        android:padding="16dp"
+        android:id="@+id/recyclerViewAllShops"
         android:layout_width="match_parent"
-        android:layout_height="0dp"
-        android:layout_weight="1"
-        android:scrollbars="vertical" />
+        android:layout_height="match_parent"
+        android:padding="16dp"
+        android:layout_marginTop="8dp"
+        android:orientation="vertical" />
 
 </LinearLayout>
